--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>A Basic HTML5 Template</title>
-    <meta name="description" content="A simple HTML5 Template for new projects.">
+    <title>Tunisian Hotel Gnerator</title>
+    <meta name="description" content="Tunisian Hotel Gnerator">
     <meta name="author" content="SitePoint">
 
-    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:title" content="Tunisian Hotel Gnerator">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
-    <meta property="og:image" content="image.png">
+    <meta property="og:description" content="Tunisian Hotel Gnerator">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
